# digitalisSmartLift

./: .gitignore
django/: README.md  conftest.py  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
django/digitalisLift/: asgi.py  settings.py  urls.py  wsgi.py
django/smartlift/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
django/smartlift/migrations/: 0001_initial.py
django/tests/: models_test.py  views_test.py
react/: README.md  package-lock.json  package.json
react/src/: App.tsx  index.css  index.tsx
react/src/components/: Building.stories.tsx  Building.tsx  Floor.stories.tsx  Floor.tsx  index.ts  utils.tsx
react/src/components/ControlPanel/: ControlPanel.stories.tsx  ControlPanel.tsx  ControlPanelDisplay.stories.ts  ControlPanelDisplay.tsx  PanelButtons.stories.ts  PanelButtons.tsx
react/src/components/Lift/: Blank.stories.tsx  Blank.tsx  Doors.tsx  Label.tsx  Lift.stories.tsx  Lift.tsx  LiftButton.tsx  Screen.tsx
react/src/contexts/: BuildingConfig.tsx  LiftConfig.tsx  LiftStatus.tsx  index.ts
react/src/hooks/: useBuildingContext.ts  useLiftConfigContext.ts  useLiftStatusContext.ts
