[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = "127"

[tool.isort]
profile = "black"

[tool.pylint.master]
ignore = "migrations"
load-plugins= "pylint_django"
django-settings-module="digitalisLift.settings"

[tool.pylint.messages_control]
disable = "W0511" # Ignore "to do" warnings

[tool.pylint.format]
max-line-length = "127"

[tool.pylint.basic]
good-names = "i,j,k,m,ex,Run,_,s3,df,zf,cc"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="digitalisLift.settings"

[tool.django-stubs]
django_settings_module = "digitalisLift.settings"

[tool.mypy]
plugins = [
    "mypy_django_plugin.main"
]

[[tool.mypy.overrides]]
module = [
]
ignore_missing_imports = true

python_version = "3.10"
follow_imports = "silent"

# Start off with these
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true

# Getting these passing should be easy
strict_equality = true
strict_concatenate = true
#strict_optional = true

# Strongly recommend enabling this one as soon as you can
check_untyped_defs = true

# These shouldn't be too much additional work, but may be tricky to
# get passing if you use a lot of untyped libraries
disallow_subclassing_any = true
disallow_untyped_decorators = true
disallow_any_generics = true

# These next few are various gradations of forcing use of type annotations
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# This one isn't too hard to get passing, but return on investment is lower
no_implicit_reexport = true

# This one can be tricky to get passing if you use a lot of untyped libraries
warn_return_any = true
