[metadata]
name = smartlift
version = 2024.03.01

[options]
package_dir =
    =smartlift
packages = find:
include_package_data = True
python_requires = >=3.10

[options.packages.find]
where = smartlift

[options.package_data]
* = py.typed

[flake8]
max-line-length = 127
extend-ignore = E203
exclude =
    .git,
    .tox,
    .pytest_cache,
    __pycache__,
    .venv
max-complexity = 10
; per-file-ignores =
    # one of conversion script
